Move LaTeX and PDF for Outer_Limits and SDPB_Manual to separate folders.

--- a/.gitignore
+++ b/.gitignore
@@ -20,11 +20,11 @@ test/out/
 test/.nfs*
 
 # TeX
-/docs/*.aux
-/docs/*.log
-/docs/*.out
-/docs/*.synctex.gz
-/docs/*.toc
+/docs/**/*.aux
+/docs/**/*.log
+/docs/**/*.out
+/docs/**/*.synctex.gz
+/docs/**/*.toc
 
 # Misc
 tmp/
