Fully functional code for GMP, GMPXX, Boost, LibXml2, RapidJSON, LibArchive. Removed few refs to local paths

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,7 +44,78 @@ find_package(PkgConfig REQUIRED)
 
 # GMP and GMPXX
 # -------------
+find_package(GMP QUIET)
+
+if (GMP_FOUND) 
+	message(STATUS "GMP version: ${GMP_VERSION}")
+else ()
+	find_path(GMP_INCLUDE_DIR 
+                        NAMES gmp.h 
+                        PATHS $ENV{GMPDIR} $ENV{GMP_HOME} $ENV{GMP_INCLUDE} ${INCLUDE_INSTALL_DIR}
+                        )
+
+	find_library(GMP_LIBRARIES gmp 
+                        PATHS $ENV{GMPDIR} $ENV{GMP_HOME} $ENV{GMP_LIB} ${LIB_INSTALL_DIR}
+                        )
+
+	if (GMP_INCLUDE_DIR AND GMP_LIBRARIES)
+    		set(GMP_FOUND TRUE)
+	endif ()
+
+	if (GMP_FOUND)
+    		if (NOT GMP_FIND_QUIETLY)
+        		message(STATUS "Found GMP: ${GMP_LIBRARIES}")
+    		endif ()
+	else ()
+    		if (GMP_FIND_REQUIRED)
+        		message(FATAL_ERROR "Could not find GMP")
+    		endif ()
+	endif ()
+
+	mark_as_advanced(GMP_INCLUDE_DIR GMP_LIBRARIES)
+
+	message(STATUS "GMP version: ${GMP_VERSION}")
+endif ()
+if(GMP_FOUND AND GMP_INCLUDE_DIR)
+    include_directories(${GMP_INCLUDE_DIR})
 endif()
+
+find_package(GMPXX QUIET)
+
+if (GMPXX_FOUND) 
+	message(STATUS "GMPXX version: ${GMPXX_VERSION}")
+else ()
+	find_path(GMPXX_INCLUDE_DIR 
+                        NAMES gmpxx.h 
+                        PATHS $ENV{GMPXXDIR} $ENV{GMPXX_HOME} $ENV{GMPXX_INCLUDE} $ENV{GMPDIR} $ENV{GMP_HOME} $ENV{GMP_INCLUDE} ${INCLUDE_INSTALL_DIR}
+                        )
+
+	find_library(GMPXX_LIBRARIES gmpxx
+                        PATHS $ENV{GMPXXDIR} $ENV{GMPXX_HOME} $ENV{GMPXX_LIB} $ENV{GMPDIR} $ENV{GMP_HOME} $ENV{GMP_LIB} ${LIB_INSTALL_DIR}
+                        )
+
+	if (GMPXX_INCLUDE_DIR AND GMPXX_LIBRARIES)
+    		set(GMPXX_FOUND TRUE)
+	endif ()
+
+	if (GMPXX_FOUND)
+    		if (NOT GMPXX_FIND_QUIETLY)
+        		message(STATUS "Found GMPXX: ${GMPXX_LIBRARIES}")
+    		endif ()
+	else ()
+    		if (GMPXX_FIND_REQUIRED)
+        		message(FATAL_ERROR "Could not find GMPXX")
+    		endif ()
+	endif ()
+
+	mark_as_advanced(GMPXX_INCLUDE_DIR GMPXX_LIBRARIES)
+
+	message(STATUS "GMPXX version: ${GMPXX_VERSION}")
+endif ()
+if(GMPXX_FOUND AND GMPXX_INCLUDE_DIR)
+    include_directories(${GMPXX_INCLUDES})
+endif()
+
 # MPFR
 # ----
 find_package(MPFR QUIET)
@@ -78,20 +149,64 @@ else ()
 
 	message(STATUS "MPFR version: ${MPFR_VERSION}")
 endif ()
+message(STATUS ${MPFR_INCLUDE_DIR})
+
+if(MPFR_FOUND AND MPFR_INCLUDE_DIR)
+    include_directories(${MPFR_INCLUDE_DIR})
+endif()
+
+
 # Boost
 # -----
 # TODO Change pkg_check_modules to a solution where you use find_path and find_library 
+
+find_package(Boost REQUIRED COMPONENTS system filesystem date_time program_options iostreams serialization)
+if(NOT Boost_FOUND)
+        pkg_check_modules(Boost REQUIRED COMPONENTS system filesystem date_time program_options iostreams serialization)
+endif()
+message(STATUS "Boost version: ${Boost_VERSION}")
+if(Boost_FOUND AND Boost_INCLUDE_DIR)
+    include_directories(${Boost_INCLUDE_DIR})
+endif()
+
+# Omitted the part where boost.py tests for boost by running a small snippet of code.
+# TODO - Maybe add the tests back again?
+
+# libxml2
+# -------
+# TODO Change pkg_check_modules to a solution where you use find_path and find_library
+find_package(LibXml2 REQUIRED)
+if(NOT LIBXML2_FOUND)
         pkg_check_modules(LIBXML2 REQUIRED libxml-2)
 endif()
+message(STATUS "libxml2 version: ${LIBXML2_VERSION} at ${LIBXML2_DIRECTORY}")
+if(LIBXML2_FOUND AND LIBXML2_INCLUDE_DIR)
+    include_directories(${LIBXML2_INCLUDE_DIR})
+endif()
+
+
 # RapidJSON
 # ---------
 # TODO Change pkg_check_modules to a solution where you use find_path and find_library
 find_package(RapidJSON REQUIRED)
 # pkg_check_modules(RapidJSON REQUIRED RapidJSON)
 message(STATUS "RapidJSON version: ${RapidJSON_VERSION}")
+if(RapidJSON_FOUND AND RapidJSON_INCLUDE_DIR)
+    include_directories(${RapidJSON_INCLUDE_DIR})
+endif()
+
+
 # libarchive
 # ----------
 # TODO Change pkg_check_modules to a solution where you use find_path and find_library
+find_package(LibArchive REQUIRED)
+if (NOT libarchive_FOUND)
+        pkg_check_modules(libarchive REQUIRED libarchive)
+endif()      
+message(STATUS "libarchive version: ${libarchive_VERSION}")
+if(LibArchive_FOUND AND LibArchive_INCLUDE_DIR)
+    include_directories(${LibArchive_INCLUDE_DIR})
+endif()
 
 
 #def configure(conf):
@@ -153,17 +268,10 @@ string(TOUPPER ${CMAKE_BUILD_TYPE} UPPER_BUILD_TYPE)
 #    use_packages=['cxx17','boost','gmpxx','mpfr','elemental','libxml2', 'rapidjson', 'libarchive']
 #TODO
 
-set(CMAKE_LIBRARY_PATH CMAKE_LIBRARY_PATH /usr/local/lib)
-message("CMAKE_LIBRARY_PATH = ${CMAKE_LIBRARY_PATH}")
+# set(CMAKE_LIBRARY_PATH CMAKE_LIBRARY_PATH /usr/local/lib)
+# message("CMAKE_LIBRARY_PATH = ${CMAKE_LIBRARY_PATH}")
 
 include(FeatureSummary)
-
-set(libxml2_INCLUDE_DIR /usr/include/libxml2)
-include(FindLibXml2)
-#find_package(libxml2)
-#find_library(LIBXML2 libxml2 REQUIRED)
-
-find_library(MPFR_LIBRARIES mpfr)
 
 #find_library()
 # TODO use target_link_libraries
@@ -235,8 +343,6 @@ mark_as_advanced(CBLAS_LIBRARIES CBLAS_INCLUDE_DIRS)
 include_directories(src)
 include_directories(external)
 include_directories(SYSTEM elemental/install/include)
-include_directories(SYSTEM ${libxml2_INCLUDE_DIR})
-include_directories(SYSTEM /home/vasdommes/install/include)
 
 add_library(sdp_solve)
 target_sources(sdp_solve
@@ -316,7 +422,7 @@ target_link_libraries(sdp_solve
         ${MPFR_LIBRARIES}
         ${LIBARCHIVE_LIBRARIES}
         ${GMP_LIBRARIES} ${GMPXX_LIBRARIES}
-        ${ELEMENTAL_LIBRARIES}
+        ${Elemental_LIBRARIES}
         #${FLINT_LIBRARIES}
         ${CBLAS_LIBRARIES})
 
